# mandelbrot

./: LICENSE  README.MD  setup.cfg
doc/source/: README.md  conf.py  mandelbrot.rst  modules.rst
mandelbrot/: __main__.py  affichage.py
mandelbrot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
