[metadata]
name = mandelbrot
author = Xin ZHANG Anran SHEN Li NI
author_email = xin.zhang@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = générateur images de lensemble  de Mandelbrot et de Julia
long_description = file: readme.md
long_description_content_type = “text/markdown”
[options]
packages = find:
python_requires = >= 3.6
install_requires =
    numpy
    matplotlib
    # Liste des dépendances externes
[options.entry_points]
console_scripts =
    MandelbrotPlot=mandelbrot.__main__:MandelbrotPlot
    JuliaPlot=mandelbrot.__main__:JuliaPlot
[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS







